[tool.poetry]
name = "aioquic-spike"
version = "0.1.0"
description = ""
authors = ["Mark Higham <mark.higham@gmail.com>"]
readme = "README.md"
packages = [{include = "aioquic_spike"}]

[tool.poetry.dependencies]
python = "^3.12"
dnslib = "^0.9.25"
jinja2 = "^3.1.4"
starlette = "^0.41.3"
wsproto = "^1.2.0"
aioquic = "^1.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
